--- a/css/style.css
+++ b/css/style.css
@@ -178,9 +178,9 @@ span.menu {
 .ab-left p {
   font-size: 1.3em;
   color: black;
-  font-family: 宋体;
-  line-height: 1.8em;
-  font-style: italic;
+
+  line-height: 1.5em;
+  /*font-style: italic;*/
 }
 .about img{
     width: 70%;
@@ -203,7 +203,7 @@ span.menu {
 .weare-main p {
   color: #999;
   font-size: 1.1em;
-  font-style: italic;
+  /*font-style: italic;*/
   line-height: 1.8em;
   margin: 1em auto 0em;
   width: 80%;
@@ -604,7 +604,8 @@ img.zoom-img:hover {
   margin: 0em 0em 0.1em 0em;
 }
 .ab-left p {
-  font-size: 0.92em;
+    font-family: 宋体;
+  font-size: 0.6em;
   line-height: 1.6em;
 }
 .contact-bottom input.name {
@@ -715,7 +716,7 @@ ul.res  a:hover,ul.res li a.active{
   font-size: 1.9em;
 }
 .ab-left {
-  margin: 0em 0em 1.5em 0em;
+  margin: 0em 0em 1em 0em;
 }
 .ab-right {
   margin: 0 auto;
